Fixed bug in firefox where firefox was not preserving space by adding whitespace: pre attribute in comment.css

--- a/sitestatic/css/comments.css
+++ b/sitestatic/css/comments.css
@@ -325,6 +325,7 @@
     resize: vertical;
     padding: 5px;
     overflow-y: scroll;
+    white-space: pre;
 }
 
 .similar-comment.selected, .new-comment.selected {
